# Robocup2D

./: 安装教程
HITSZer/: Makefile  config.status  (+2 more)
librcsc-4.1.0/rcsc/: Makefile  configure.in
librcsc-4.1.0/rcsc/action/: Makefile
librcsc-4.1.0/rcsc/ann/: Makefile
librcsc-4.1.0/rcsc/ann/.libs/: librcsc_ann.so.1.0.1
librcsc-4.1.0/rcsc/autom4te.cache/: output.1  requests  traces.0  traces.1
librcsc-4.1.0/rcsc/coach/: Makefile  coach_agent.cpp  global_object.h
librcsc-4.1.0/rcsc/common/: Makefile  audio_codec.cpp  audio_codec.h  audio_memory.cpp  audio_memory.h  basic_client.cpp  basic_client.h  say_message_parser.cpp  say_message_parser.h  soccer_agent.cpp  soccer_agent.h
librcsc-4.1.0/rcsc/common/.deps/: say_message_parser.Plo
librcsc-4.1.0/rcsc/formation/: Makefile  formation.cpp  formation.h  formation_bpn.cpp  formation_rbf.cpp  formation_rbf.h  formation_sbsp.cpp  formation_sbsp.h  formation_static.h  formation_uva.cpp  sample_data.h
librcsc-4.1.0/rcsc/geom/: Makefile  line_2d.h
librcsc-4.1.0/rcsc/geom/.libs/: librcsc_geom.so.7.0.0
librcsc-4.1.0/rcsc/geom/triangle/: Makefile
librcsc-4.1.0/rcsc/gz/: Makefile
librcsc-4.1.0/rcsc/gz/.libs/: librcsc_gz.so.0.0.2
librcsc-4.1.0/rcsc/monitor/: Makefile
librcsc-4.1.0/rcsc/net/: Makefile  basic_socket.cpp  basic_socket.h  tcp_socket.cpp
librcsc-4.1.0/rcsc/param/: Makefile
librcsc-4.1.0/rcsc/player/: Makefile  action_effector.cpp  freeform_parser.cpp  intercept_table.cpp  player_agent.cpp  player_agent.h  player_object.h  say_message_builder.cpp  say_message_builder.h  world_model.cpp  world_model.h
librcsc-4.1.0/rcsc/rcg/: Makefile
librcsc-4.1.0/rcsc/time/: Makefile
librcsc-4.1.0/rcsc/trainer/: Makefile
librcsc-4.1.0/rcsc/util/: Makefile
(+119 files in other folders)
