#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([librcsc_hitsz], [1.0], [1351855206@qq.com])
AC_CONFIG_SRCDIR([mymain.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lrcsc_geom':
AC_CHECK_LIB([rcsc_geom], [main])
# FIXME: Replace `main' with a function in `-lrcsc_time':
AC_CHECK_LIB([rcsc_time], [main])

# Checks for header files.
AC_PATH_X
AC_CHECK_HEADERS([arpa/inet.h fcntl.h float.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_STRTOD
AC_CHECK_FUNCS([floor gethostbyname gettimeofday memset pow rint select socket sqrt strtol])

AC_CONFIG_FILES([Makefile
                 action/Makefile
                 ann/Makefile
                 coach/Makefile
                 common/Makefile
                 formation/Makefile
                 geom/Makefile
                 geom/triangle/Makefile
                 gz/Makefile
                 monitor/Makefile
                 net/Makefile
                 param/Makefile
                 player/Makefile
                 rcg/Makefile
                 time/Makefile
                 trainer/Makefile
                 util/Makefile])
AC_OUTPUT
